// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Project Details render with modules and edit menu 1`] = `
<div>
  <div
    class="Layout--horizontal StyledProps--main PageHeader--container PageHeader--xxlarge header StyledProps--flex StyledProps--padding-left-xlarge StyledProps--padding-right-xlarge"
  >
    <div
      class="Layout--vertical StyledProps--main"
    >
      <div
        class="PageHeader--breadcrumbsDiv"
      >
        <div
          class="Layout--horizontal StyledProps--main Breadcrumbs--breadcrumbs StyledProps--flex StyledProps--flex-align-center-center StyledProps--flex-justifyContent-flex-start"
        >
          <div
            class="Layout--horizontal StyledProps--main StyledProps--flex StyledProps--flex-align-center-center StyledProps--flex-justifyContent-flex-start"
          >
            <a
              class="Breadcrumbs--breadcrumb"
              href="/account/testAcc/home"
            >
              <span
                class="bp3-icon StyledProps--main StyledProps--padding-right-xsmall StyledProps--color StyledProps--color-primary7"
                data-icon="harness"
              >
                <svg
                  height="16"
                  viewBox="0 0 25 25"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M22.974 8.186L16.708 1.88a7.023 7.023 0 00-2.59-1.572C11.98-.409 9.858.154 8.135 1.88L1.868 8.186a7.081 7.081 0 00-1.562 2.606c-.713 2.153-.153 4.289 1.562 6.023l6.266 6.306a7.113 7.113 0 002.589 1.58 5.663 5.663 0 001.808.308c1.503 0 2.946-.64 4.177-1.88l6.266-6.305a7.08 7.08 0 001.562-2.606c.713-2.162.153-4.298-1.562-6.032zm-10.07-4.477c.706.213 1.232.7 1.274.735l1.851 1.862-3.608 3.631-3.608-3.63 1.859-1.872c.5-.496 1.197-1.034 2.233-.726zm-9.219 8.305c.212-.71.696-1.24.73-1.282l1.85-1.863 3.609 3.632-3.608 3.63-1.86-1.87c-.492-.504-1.027-1.214-.721-2.247zm8.252 9.279c-.705-.214-1.231-.701-1.273-.735l-1.851-1.863 3.608-3.631 3.608 3.631-1.86 1.871c-.5.496-1.205 1.034-2.232.726zm9.22-8.305c-.212.709-.696 1.239-.73 1.281l-1.851 1.863-3.608-3.631 3.608-3.632 1.86 1.872c.492.504 1.027 1.204.72 2.247z"
                    fill="#4facdf"
                  />
                </svg>
              </span>
              <p
                class="StyledProps--font StyledProps--main StyledProps--intent-primary StyledProps--font-size-small"
              >
                common.home
              </p>
            </a>
            <span
              class="bp3-icon StyledProps--main StyledProps--color StyledProps--color-grey500 StyledProps--padding-right-xsmall StyledProps--padding-left-xsmall"
              data-icon="main-chevron-right"
            >
              <svg
                height="8"
                viewBox="0 0 8 14"
                width="8"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M7.7 6.3l-6-6C1.5.1 1.3 0 1 0 .4 0 0 .4 0 1c0 .3.1.5.3.7L5.6 7 .3 12.3c-.2.2-.3.4-.3.7 0 .6.4 1 1 1 .3 0 .5-.1.7-.3l6-6c.2-.2.3-.4.3-.7s-.1-.5-.3-.7z"
                  fill="#4d5969"
                />
              </svg>
            </span>
          </div>
          <div
            class="Layout--horizontal StyledProps--main StyledProps--flex StyledProps--flex-align-center-center StyledProps--flex-justifyContent-flex-start"
          >
            <a
              class="Breadcrumbs--breadcrumb"
              href="/account/testAcc/home/projects"
            >
              <p
                class="StyledProps--font StyledProps--main StyledProps--intent-primary StyledProps--font-size-small"
              >
                projectsText
              </p>
            </a>
            <span
              class="bp3-icon StyledProps--main StyledProps--color StyledProps--color-grey500 StyledProps--padding-right-xsmall StyledProps--padding-left-xsmall"
              data-icon="main-chevron-right"
            >
              <svg
                height="8"
                viewBox="0 0 8 14"
                width="8"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M7.7 6.3l-6-6C1.5.1 1.3 0 1 0 .4 0 0 .4 0 1c0 .3.1.5.3.7L5.6 7 .3 12.3c-.2.2-.3.4-.3.7 0 .6.4 1 1 1 .3 0 .5-.1.7-.3l6-6c.2-.2.3-.4.3-.7s-.1-.5-.3-.7z"
                  fill="#4d5969"
                />
              </svg>
            </span>
          </div>
        </div>
      </div>
      <div
        class="Layout--vertical Layout--layout-spacing-small StyledProps--main title StyledProps--padding-top-small"
      >
        <div
          class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main StyledProps--margin-bottom-medium StyledProps--flex StyledProps--flex-alignItems-center StyledProps--flex-justifyContent-flex-start"
        >
          <div
            class="colorBar"
            style="background-color: rgb(0, 99, 247);"
          />
        </div>
        <div
          class="Layout--horizontal StyledProps--main StyledProps--flex StyledProps--flex-alignItems-center StyledProps--flex-justifyContent-flex-start"
        >
          <p
            class="StyledProps--font Text--lineclamp StyledProps--main StyledProps--font-size-medium StyledProps--font-weight-semi-bold StyledProps--color StyledProps--color-grey800 StyledProps--padding-right-xlarge"
            style="--text-line-clamp: 1;"
          >
            dummy name
          </p>
          <p
            class="StyledProps--font Text--lineclamp StyledProps--main StyledProps--font-size-small StyledProps--font-weight-semi-bold StyledProps--color StyledProps--color-grey500 StyledProps--padding-right-medium"
            style="--text-line-clamp: 1;"
          >
            idLabel
          </p>
          <div
            class="divider"
          />
          <p
            class="StyledProps--font Text--lineclamp StyledProps--main StyledProps--font-size-small StyledProps--font-weight-semi-bold StyledProps--color StyledProps--color-grey500 StyledProps--padding-left-medium"
            style="--text-line-clamp: 1;"
          >
            orgLabel: testOrg
          </p>
        </div>
        <div
          class="Layout--horizontal StyledProps--main StyledProps--padding-top-medium"
        >
          <div
            class="Layout--horizontal Layout--layout-spacing-xsmall StyledProps--main"
          >
            <span
              class="Tag--main"
            >
              <span
                class="bp3-tag tags"
                style="max-width: 80px;"
              >
                <span
                  class="bp3-text-overflow-ellipsis bp3-fill"
                >
                  tag1
                </span>
              </span>
            </span>
            <span
              class="Tag--main"
            >
              <span
                class="bp3-tag tags"
                style="max-width: 80px;"
              >
                <span
                  class="bp3-text-overflow-ellipsis bp3-fill"
                >
                  tag2:tag3
                </span>
              </span>
            </span>
            <span
              class="Tag--main"
            >
              <span
                class="bp3-tag tags"
                style="max-width: 80px;"
              >
                <span
                  class="bp3-text-overflow-ellipsis bp3-fill"
                >
                  tag4:tag3
                </span>
              </span>
            </span>
            <span
              class="Tag--main"
            >
              <span
                class="bp3-tag tags"
                style="max-width: 80px;"
              >
                <span
                  class="bp3-text-overflow-ellipsis bp3-fill"
                >
                  tag5:tag3
                </span>
              </span>
            </span>
            <span
              class="Tag--main"
            >
              <span
                class="bp3-tag tags"
                style="max-width: 80px;"
              >
                <span
                  class="bp3-text-overflow-ellipsis bp3-fill"
                >
                  tag6:tag3
                </span>
              </span>
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="Layout--vertical StyledProps--main StyledProps--padding-top-small StyledProps--flex StyledProps--flex-justifyContent-space-between StyledProps--flex-alignItems-flex-end"
    >
      <span
        class="bp3-popover-wrapper bp3-dark"
      >
        <span
          class="bp3-popover-target"
        >
          <button
            class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main Button--with-current-color Button--iconOnly Button--without-shadow Button--withLeftIcon"
            type="button"
          >
            <span
              class="bp3-icon StyledProps--main"
              data-icon="Options"
            >
              <svg
                fill="none"
                height="16"
                viewBox="0 0 4 16"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  clip-rule="evenodd"
                  d="M2 12.5a1 1 0 100 2 1 1 0 000-2zm-2 1a2 2 0 114 0 2 2 0 01-4 0zm2-12a1 1 0 100 2 1 1 0 000-2zm-2 1a2 2 0 114 0 2 2 0 01-4 0zM2 7a1 1 0 100 2 1 1 0 000-2zM0 8a2 2 0 114 0 2 2 0 01-4 0z"
                  fill="currentColor"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
          </button>
        </span>
      </span>
      <div
        class="Layout--horizontal StyledProps--main StyledProps--padding-right-huge StyledProps--margin-right-huge"
      >
        <div
          class="Layout--vertical StyledProps--main StyledProps--padding-right-xlarge"
        >
          <p
            class="StyledProps--font StyledProps--main StyledProps--font-xsmall StyledProps--color StyledProps--color-grey400 StyledProps--padding-left-xsmall StyledProps--padding-bottom-small"
          >
            adminLabel (1)
          </p>
          <div
            class="Layout--horizontal StyledProps--main StyledProps--flex StyledProps--flex-alignItems-center StyledProps--flex-justifyContent-flex-start"
          >
            <div
              class="AvatarGroup--stack projectDetailsAvatarGroup"
              style="--avatar-over-lap: -13px;"
            >
              <div
                class="AvatarGroup--stackAvatar Avatar--Avatar Avatar--contentStyle"
              >
                <span
                  class="bp3-popover-wrapper Avatar--avatarPopOver"
                >
                  <span
                    class="bp3-popover-target"
                  >
                    <div
                      class="Avatar--AvatarInner"
                      style="border-radius: 100%; line-height: 26px; width: 32px; height: 32px; font-size: 10px;"
                      tabindex="0"
                    >
                      +
                    </div>
                  </span>
                </span>
              </div>
              <div
                class="AvatarGroup--stackAvatar Avatar--Avatar Avatar--contentStyle"
                uuid="19bYA-ooQZOTZQxf2N-VPA"
              >
                <span
                  class="bp3-popover-wrapper Avatar--avatarPopOver"
                >
                  <span
                    class="bp3-popover-target"
                  >
                    <div
                      class="Avatar--AvatarInner"
                      style="border-radius: 100%; line-height: 26px; width: 32px; height: 32px; font-size: 10px;"
                      tabindex="0"
                    >
                      E
                    </div>
                  </span>
                </span>
              </div>
            </div>
          </div>
        </div>
        <div
          class="Layout--vertical StyledProps--main"
        >
          <p
            class="StyledProps--font StyledProps--main StyledProps--font-xsmall StyledProps--color StyledProps--color-grey400 StyledProps--padding-left-xsmall StyledProps--padding-bottom-small"
          >
            collaboratorsLabel (5)
          </p>
          <div
            class="Layout--horizontal StyledProps--main StyledProps--flex StyledProps--flex-alignItems-center StyledProps--flex-justifyContent-flex-start"
          >
            <div
              class="AvatarGroup--stack projectDetailsAvatarGroup"
              style="--avatar-over-lap: -13px;"
            >
              <div
                class="AvatarGroup--stackAvatar Avatar--Avatar Avatar--contentStyle"
              >
                <span
                  class="bp3-popover-wrapper Avatar--avatarPopOver"
                >
                  <span
                    class="bp3-popover-target"
                  >
                    <div
                      class="Avatar--AvatarInner"
                      style="border-radius: 100%; line-height: 26px; width: 32px; height: 32px; font-size: 10px;"
                      tabindex="0"
                    >
                      +
                    </div>
                  </span>
                </span>
              </div>
              <div
                class="AvatarGroup--stackAvatar Avatar--Avatar Avatar--contentStyle"
                uuid="lv0euRhKRCyiXWzS7pOg6g"
              >
                <span
                  class="bp3-popover-wrapper Avatar--avatarPopOver"
                >
                  <span
                    class="bp3-popover-target"
                  >
                    <div
                      class="Avatar--AvatarInner"
                      style="border-radius: 100%; line-height: 26px; width: 32px; height: 32px; font-size: 10px;"
                      tabindex="0"
                    >
                      E
                    </div>
                  </span>
                </span>
              </div>
              <div
                class="AvatarGroup--stackAvatar Avatar--Avatar Avatar--contentStyle"
                uuid="0osgWsTZRsSZ8RWfjLRkEg"
              >
                <span
                  class="bp3-popover-wrapper Avatar--avatarPopOver"
                >
                  <span
                    class="bp3-popover-target"
                  >
                    <div
                      class="Avatar--AvatarInner"
                      style="border-radius: 100%; line-height: 26px; width: 32px; height: 32px; font-size: 10px;"
                      tabindex="0"
                    >
                      E
                    </div>
                  </span>
                </span>
              </div>
              <div
                class="AvatarGroup--stackAvatar Avatar--Avatar Avatar--contentStyle"
                uuid="ZqXNvYmURnO46PX7HwgEtQ"
              >
                <span
                  class="bp3-popover-wrapper Avatar--avatarPopOver"
                >
                  <span
                    class="bp3-popover-target"
                  >
                    <div
                      class="Avatar--AvatarInner"
                      style="border-radius: 100%; line-height: 26px; width: 32px; height: 32px; font-size: 10px;"
                      tabindex="0"
                    >
                      E
                    </div>
                  </span>
                </span>
              </div>
              <div
                class="AvatarGroup--stackAvatar Avatar--Avatar Avatar--contentStyle"
                uuid="nhLgdGgxS_iqa0KP5edC-w"
              >
                <span
                  class="bp3-popover-wrapper Avatar--avatarPopOver"
                >
                  <span
                    class="bp3-popover-target"
                  >
                    <div
                      class="Avatar--AvatarInner"
                      style="border-radius: 100%; line-height: 26px; width: 32px; height: 32px; font-size: 10px;"
                      tabindex="0"
                    >
                      E
                    </div>
                  </span>
                </span>
              </div>
              <div
                class="AvatarGroup--stackAvatar Avatar--Avatar Avatar--contentStyle"
                uuid="BnTbQTIJS4SkadzYv0BcbA"
              >
                <span
                  class="bp3-popover-wrapper Avatar--avatarPopOver"
                >
                  <span
                    class="bp3-popover-target"
                  >
                    <div
                      class="Avatar--AvatarInner"
                      style="border-radius: 100%; line-height: 26px; width: 32px; height: 32px; font-size: 10px;"
                      tabindex="0"
                    >
                      E
                    </div>
                  </span>
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="StyledProps--font StyledProps--main PageBody--pageBody"
    data-name="page-body"
  >
    <div
      class="Layout--horizontal StyledProps--main"
    >
      <div
        class="StyledProps--font StyledProps--main enabledModules StyledProps--padding-xxlarge"
      >
        <div
          class="Layout--vertical Layout--layout-spacing-large StyledProps--main StyledProps--padding-small"
        >
          <p
            class="StyledProps--font StyledProps--main StyledProps--font-size-medium StyledProps--font-weight-semi-bold StyledProps--color StyledProps--color-black"
          >
            modules
          </p>
          <div
            class="bp3-card bp3-interactive bp3-elevation-0 Card--card card Card--interactive"
            tabindex="0"
          >
            <div
              class="Layout--horizontal StyledProps--main"
            >
              <div
                class="StyledProps--font StyledProps--main StyledProps--flex StyledProps--border StyledProps--border-right StyledProps--border-color-white"
                style="width: 100%;"
              >
                <div
                  class="Layout--horizontal Layout--layout-spacing-large StyledProps--main StyledProps--flex"
                >
                  <span
                    class="bp3-icon StyledProps--main"
                    data-icon="cd-main"
                  >
                    <svg
                      height="70"
                      viewBox="0 0 32 32"
                      width="70"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        clip-rule="evenodd"
                        d="M26.427 7.06A5.073 5.073 0 0129 11.52l-.077 8.934a5.073 5.073 0 01-2.537 4.35l-8.002 4.618a5.073 5.073 0 01-5.035.021l-7.776-4.402A5.073 5.073 0 013 20.583l.077-8.935a5.073 5.073 0 012.537-4.35l8.002-4.619a5.073 5.073 0 015.035-.02l7.776 4.402zm-2.83 6.938c-.42 1.586-2.029 2.538-3.601 2.141l-7.489-2.026a4.696 4.696 0 00-3.62.48 4.773 4.773 0 00-2.222 2.925 4.835 4.835 0 00.479 3.664 4.757 4.757 0 002.905 2.251 4.696 4.696 0 003.62-.48 4.773 4.773 0 002.222-2.924l.26-1.047a.25.25 0 00-.177-.302l-1.258-.34a.25.25 0 00-.307.18l-.256 1.025c-.426 1.602-2.064 2.556-3.651 2.127-1.582-.428-2.523-2.073-2.1-3.67.421-1.586 2.03-2.538 3.602-2.142l7.489 2.027a4.696 4.696 0 003.62-.48 4.773 4.773 0 002.222-2.925 4.835 4.835 0 00-.479-3.664 4.757 4.757 0 00-2.905-2.251 4.696 4.696 0 00-3.62.48 4.773 4.773 0 00-2.222 2.924l-.247.828a.25.25 0 00.174.312l1.259.34a.25.25 0 00.304-.169l.248-.827c.426-1.602 2.064-2.557 3.651-2.127 1.582.428 2.523 2.073 2.1 3.67z"
                        fill="url(#cd-main_svg__a)"
                        fill-rule="evenodd"
                      />
                      <defs>
                        <lineargradient
                          gradientUnits="userSpaceOnUse"
                          id="cd-main_svg__a"
                          x1="6.774"
                          x2="21.5"
                          y1="2"
                          y2="30"
                        >
                          <stop
                            stop-color="#62F91F"
                          />
                          <stop
                            offset="1"
                            stop-color="#45BD35"
                          />
                        </lineargradient>
                      </defs>
                    </svg>
                  </span>
                  <div>
                    <div
                      class="Layout--vertical StyledProps--main StyledProps--padding-bottom-medium"
                    >
                      <p
                        class="StyledProps--font StyledProps--main StyledProps--font-size-small"
                      >
                        PROJECTSORGS.PURPOSELIST.CONTINUOUS
                      </p>
                      <p
                        class="StyledProps--font StyledProps--main StyledProps--font-size-medium StyledProps--color StyledProps--color-black"
                      >
                        common.purpose.cd.delivery
                      </p>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="bp3-card bp3-interactive bp3-elevation-0 Card--card card Card--interactive"
            tabindex="0"
          >
            <div
              class="Layout--horizontal StyledProps--main"
            >
              <div
                class="StyledProps--font StyledProps--main StyledProps--flex StyledProps--border StyledProps--border-right StyledProps--border-color-white"
                style="width: 100%;"
              >
                <div
                  class="Layout--horizontal Layout--layout-spacing-large StyledProps--main StyledProps--flex"
                >
                  <span
                    class="bp3-icon StyledProps--main"
                    data-icon="ci-main"
                  >
                    <svg
                      height="70"
                      viewBox="0 0 32 32"
                      width="70"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        clip-rule="evenodd"
                        d="M29 16a13.02 13.02 0 01-.854 4.6.387.387 0 01-.637.13l-3.99-3.94a.534.534 0 01-.085-.628c.432-.827.649-1.773.649-2.762.056-3.222-2.6-5.878-5.879-5.878-1.04 0-1.994.26-2.823.706a.53.53 0 01-.623-.08l-3.551-3.504a.48.48 0 01.154-.794A12.79 12.79 0 0116 3c7.178 0 13 5.822 13 13zM8.476 5.42a.582.582 0 01.746.072l4.035 4.035c.179.178.194.46.054.67a5.829 5.829 0 00-.985 3.26 5.934 5.934 0 005.935 5.934 5.829 5.829 0 003.26-.985.531.531 0 01.67.054l4.367 4.368a.582.582 0 01.065.756C24.225 26.86 20.4 29 16 29 8.822 29 3 23.178 3 16c0-4.403 2.144-8.231 5.476-10.58zm9.785 11.71a3.932 3.932 0 003.956-3.956 3.932 3.932 0 00-3.956-3.957 3.932 3.932 0 00-3.957 3.957 3.932 3.932 0 003.957 3.956z"
                        fill="url(#ci-main_svg__a)"
                        fill-rule="evenodd"
                      />
                      <defs>
                        <lineargradient
                          gradientUnits="userSpaceOnUse"
                          id="ci-main_svg__a"
                          x1="-5.398"
                          x2="11.398"
                          y1="11.398"
                          y2="37.398"
                        >
                          <stop
                            stop-color="#73DFE7"
                          />
                          <stop
                            offset="1"
                            stop-color="#0095F7"
                          />
                        </lineargradient>
                      </defs>
                    </svg>
                  </span>
                  <div>
                    <div
                      class="Layout--vertical StyledProps--main StyledProps--padding-bottom-medium"
                    >
                      <p
                        class="StyledProps--font StyledProps--main StyledProps--font-size-small"
                      >
                        PROJECTSORGS.PURPOSELIST.CONTINUOUS
                      </p>
                      <p
                        class="StyledProps--font StyledProps--main StyledProps--font-size-medium StyledProps--color StyledProps--color-black"
                      >
                        common.purpose.ci.integration
                      </p>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="bp3-card bp3-interactive bp3-elevation-0 Card--card card Card--interactive"
            tabindex="0"
          >
            <div
              class="Layout--horizontal StyledProps--main"
            >
              <div
                class="StyledProps--font StyledProps--main StyledProps--flex StyledProps--border StyledProps--border-right StyledProps--border-color-white"
                style="width: 100%;"
              >
                <div
                  class="Layout--horizontal Layout--layout-spacing-large StyledProps--main StyledProps--flex"
                >
                  <span
                    class="bp3-icon StyledProps--main"
                    data-icon="cf-main"
                  >
                    <svg
                      height="70"
                      viewBox="0 0 32 32"
                      width="70"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M10.632 2.08A5.19 5.19 0 004.62 6.29L2.08 20.697a5.19 5.19 0 004.21 6.012l7.464 1.316a.2.2 0 00.207-.298L6.882 15.656c-.296-.469-.292-1.382.05-1.6.08-.05.313-.259.313-.259l.398-.436.066-.072c.37-.406.704-.773 1.76-1.302l.227-.079c1.548-.484 2.41-.449 3.27-.414.862.035 1.724.07 3.274-.414 1.272-.397 2.43-1.178 3.074-1.667a.622.622 0 01.9.15l4.596 7.362a.53.53 0 01-.101.696 8.694 8.694 0 01-2.834 1.538c-1.549.484-2.432.463-3.316.442-.884-.021-1.768-.042-3.318.442-1.314.41-1.868.948-2.07 1.204-.048.061-.07.21-.032.279.4.724 2.295 4.06 3.794 6.693a.998.998 0 00.695.49l3.07.541a5.19 5.19 0 006.012-4.21l2.54-14.408a5.19 5.19 0 00-4.21-6.012L10.633 2.08z"
                        fill="url(#cf-main_svg__a)"
                      />
                      <path
                        d="M16.646 13.074c-1.303.34-2.093.316-2.882.29-.79-.024-1.58-.049-2.881.291-.744.216-1.178.592-1.587 1.072a.197.197 0 00-.018.23l2.482 4.069c.064.106.209.13.307.055.374-.283 1.28-.9 2.42-1.198 1.469-.383 2.348-.375 3.273-.366.717.007 1.462.014 2.53-.16a4.454 4.454 0 001.629-.635.347.347 0 00.094-.488L19.472 12.3a.421.421 0 00-.56-.128 9.57 9.57 0 01-2.266.902z"
                        fill="url(#cf-main_svg__b)"
                      />
                      <defs>
                        <lineargradient
                          gradientUnits="userSpaceOnUse"
                          id="cf-main_svg__a"
                          x1="6.837"
                          x2="23.78"
                          y1="2"
                          y2="28.227"
                        >
                          <stop
                            stop-color="#FFC100"
                          />
                          <stop
                            offset="1"
                            stop-color="#E66B35"
                          />
                        </lineargradient>
                        <lineargradient
                          gradientUnits="userSpaceOnUse"
                          id="cf-main_svg__b"
                          x1="6.837"
                          x2="23.78"
                          y1="2"
                          y2="28.227"
                        >
                          <stop
                            stop-color="#FFC100"
                          />
                          <stop
                            offset="1"
                            stop-color="#E66B35"
                          />
                        </lineargradient>
                      </defs>
                    </svg>
                  </span>
                  <div>
                    <div
                      class="Layout--vertical StyledProps--main StyledProps--padding-bottom-medium"
                    >
                      <p
                        class="StyledProps--font StyledProps--main StyledProps--font-size-small"
                      >
                        COMMON.PURPOSE.CF.FEATURE
                      </p>
                      <p
                        class="StyledProps--font StyledProps--main StyledProps--font-size-medium StyledProps--color StyledProps--color-black"
                      >
                        common.purpose.cf.flags
                      </p>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="bp3-card bp3-interactive bp3-elevation-0 Card--card card Card--interactive"
            tabindex="0"
          >
            <div
              class="Layout--horizontal StyledProps--main"
            >
              <div
                class="StyledProps--font StyledProps--main StyledProps--flex StyledProps--border StyledProps--border-right StyledProps--border-color-white"
                style="width: 100%;"
              >
                <div
                  class="Layout--horizontal Layout--layout-spacing-large StyledProps--main StyledProps--flex"
                >
                  <span
                    class="bp3-icon StyledProps--main"
                    data-icon="ce-main"
                  >
                    <svg
                      height="70"
                      viewBox="0 0 32 32"
                      width="70"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M15.84 26.552a.5.5 0 00.5.5h8.343v-.005a6.579 6.579 0 00.284-13.13.548.548 0 01-.492-.429C23.563 9.21 19.761 6 15.21 6a9.473 9.473 0 00-9.474 9.473c0 .056-.039.103-.093.114a5.791 5.791 0 001.146 11.465h6.661a.5.5 0 00.5-.5v-1.568a.527.527 0 00-.436-.51c-1.04-.2-1.932-.63-2.542-1.244-.546-.55-.872-1.232-.973-2.032-.035-.277.194-.505.474-.504l1.113.005c.268.001.48.215.541.475.256 1.093 1.245 1.813 2.711 1.82.571.003 2.7-.264 2.707-1.736.006-1.177-1.542-1.623-3.006-1.984a38.2 38.2 0 01-.758-.193c-1.656-.44-3.407-.943-3.398-3.062.01-2.058 1.742-3.119 3.567-3.335V10.71a.5.5 0 01.5-.5h.887a.5.5 0 01.5.5v2.028c1.316.212 3.089.878 3.39 2.906.04.28-.19.512-.472.511l-1.12-.005c-.256-.001-.463-.2-.54-.445-.29-.926-1.2-1.488-2.532-1.494-.886-.005-2.17.466-2.176 1.54-.005.973.74 1.305 3.52 2.023l.369.094.148.036c1.06.256 3.232.78 3.221 3.11-.008 1.839-1.265 3.096-3.364 3.47a.526.526 0 00-.442.511v1.557z"
                        fill="url(#ce-main_svg__a)"
                      />
                      <defs>
                        <lineargradient
                          gradientUnits="userSpaceOnUse"
                          id="ce-main_svg__a"
                          x1="5.821"
                          x2="19.271"
                          y1="4.393"
                          y2="33.469"
                        >
                          <stop
                            stop-color="#00CFDE"
                          />
                          <stop
                            offset="1"
                            stop-color="#05A660"
                          />
                        </lineargradient>
                      </defs>
                    </svg>
                  </span>
                  <div>
                    <div
                      class="Layout--vertical StyledProps--main StyledProps--padding-bottom-medium"
                    >
                      <p
                        class="StyledProps--font StyledProps--main StyledProps--font-size-small"
                      >
                        COMMON.PURPOSE.CE.CLOUDCOST
                      </p>
                      <p
                        class="StyledProps--font StyledProps--main StyledProps--font-size-medium StyledProps--color StyledProps--color-black"
                      >
                        common.purpose.ce.management
                      </p>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="bp3-card bp3-interactive bp3-elevation-0 Card--card card Card--interactive"
            tabindex="0"
          >
            <div
              class="Layout--horizontal StyledProps--main"
            >
              <div
                class="StyledProps--font StyledProps--main StyledProps--flex StyledProps--border StyledProps--border-right StyledProps--border-color-white"
                style="width: 100%;"
              >
                <div
                  class="Layout--horizontal Layout--layout-spacing-large StyledProps--main StyledProps--flex"
                >
                  <span
                    class="bp3-icon StyledProps--main"
                    data-icon="cv-main"
                  >
                    <svg
                      height="70"
                      viewBox="0 0 32 32"
                      width="70"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M14.194 29.156l.417.24c.425.238.904.359 1.389.351a2.75 2.75 0 001.361-.351l.417-.24c6.618-3.78 10.715-10.877 10.722-18.575v-.197a2.822 2.822 0 00-1.389-2.463l-.332-.189L15.94 21.381a.67.67 0 01-.926.119L8.82 16.855a.67.67 0 01-.134-.938l.344-.46a.67.67 0 01.938-.133l4.705 3.528c.29.218.7.165.926-.12l9.498-11.96-7.708-4.395a2.747 2.747 0 00-2.778 0L4.89 7.921A2.822 2.822 0 003.5 10.384v.197c.002 7.692 4.087 14.788 10.694 18.575z"
                        fill="url(#cv-main_svg__a)"
                      />
                      <defs>
                        <lineargradient
                          gradientUnits="userSpaceOnUse"
                          id="cv-main_svg__a"
                          x1="7.827"
                          x2="23.016"
                          y1="2"
                          y2="28.457"
                        >
                          <stop
                            stop-color="#BEA1FF"
                          />
                          <stop
                            offset="1"
                            stop-color="#8A36FF"
                          />
                        </lineargradient>
                      </defs>
                    </svg>
                  </span>
                  <div>
                    <div
                      class="Layout--vertical StyledProps--main StyledProps--padding-bottom-medium"
                    >
                      <p
                        class="StyledProps--font StyledProps--main StyledProps--font-size-small"
                      >
                        PROJECTSORGS.PURPOSELIST.CHANGE
                      </p>
                      <p
                        class="StyledProps--font StyledProps--main StyledProps--font-size-medium StyledProps--color StyledProps--color-black"
                      >
                        common.purpose.cv.intelligence
                      </p>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Project Details render with no modules and invite collaborators 1`] = `
<div>
  <div
    class="Layout--horizontal StyledProps--main PageHeader--container PageHeader--xlarge header StyledProps--flex StyledProps--padding-left-xlarge StyledProps--padding-right-xlarge"
  >
    <div
      class="Layout--vertical StyledProps--main"
    >
      <div
        class="PageHeader--breadcrumbsDiv"
      >
        <div
          class="Layout--horizontal StyledProps--main Breadcrumbs--breadcrumbs StyledProps--flex StyledProps--flex-align-center-center StyledProps--flex-justifyContent-flex-start"
        >
          <div
            class="Layout--horizontal StyledProps--main StyledProps--flex StyledProps--flex-align-center-center StyledProps--flex-justifyContent-flex-start"
          >
            <a
              class="Breadcrumbs--breadcrumb"
              href="/account/testAcc/home"
            >
              <span
                class="bp3-icon StyledProps--main StyledProps--padding-right-xsmall StyledProps--color StyledProps--color-primary7"
                data-icon="harness"
              >
                <svg
                  height="16"
                  viewBox="0 0 25 25"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M22.974 8.186L16.708 1.88a7.023 7.023 0 00-2.59-1.572C11.98-.409 9.858.154 8.135 1.88L1.868 8.186a7.081 7.081 0 00-1.562 2.606c-.713 2.153-.153 4.289 1.562 6.023l6.266 6.306a7.113 7.113 0 002.589 1.58 5.663 5.663 0 001.808.308c1.503 0 2.946-.64 4.177-1.88l6.266-6.305a7.08 7.08 0 001.562-2.606c.713-2.162.153-4.298-1.562-6.032zm-10.07-4.477c.706.213 1.232.7 1.274.735l1.851 1.862-3.608 3.631-3.608-3.63 1.859-1.872c.5-.496 1.197-1.034 2.233-.726zm-9.219 8.305c.212-.71.696-1.24.73-1.282l1.85-1.863 3.609 3.632-3.608 3.63-1.86-1.87c-.492-.504-1.027-1.214-.721-2.247zm8.252 9.279c-.705-.214-1.231-.701-1.273-.735l-1.851-1.863 3.608-3.631 3.608 3.631-1.86 1.871c-.5.496-1.205 1.034-2.232.726zm9.22-8.305c-.212.709-.696 1.239-.73 1.281l-1.851 1.863-3.608-3.631 3.608-3.632 1.86 1.872c.492.504 1.027 1.204.72 2.247z"
                    fill="#4facdf"
                  />
                </svg>
              </span>
              <p
                class="StyledProps--font StyledProps--main StyledProps--intent-primary StyledProps--font-size-small"
              >
                common.home
              </p>
            </a>
            <span
              class="bp3-icon StyledProps--main StyledProps--color StyledProps--color-grey500 StyledProps--padding-right-xsmall StyledProps--padding-left-xsmall"
              data-icon="main-chevron-right"
            >
              <svg
                height="8"
                viewBox="0 0 8 14"
                width="8"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M7.7 6.3l-6-6C1.5.1 1.3 0 1 0 .4 0 0 .4 0 1c0 .3.1.5.3.7L5.6 7 .3 12.3c-.2.2-.3.4-.3.7 0 .6.4 1 1 1 .3 0 .5-.1.7-.3l6-6c.2-.2.3-.4.3-.7s-.1-.5-.3-.7z"
                  fill="#4d5969"
                />
              </svg>
            </span>
          </div>
          <div
            class="Layout--horizontal StyledProps--main StyledProps--flex StyledProps--flex-align-center-center StyledProps--flex-justifyContent-flex-start"
          >
            <a
              class="Breadcrumbs--breadcrumb"
              href="/account/testAcc/home/projects"
            >
              <p
                class="StyledProps--font StyledProps--main StyledProps--intent-primary StyledProps--font-size-small"
              >
                projectsText
              </p>
            </a>
            <span
              class="bp3-icon StyledProps--main StyledProps--color StyledProps--color-grey500 StyledProps--padding-right-xsmall StyledProps--padding-left-xsmall"
              data-icon="main-chevron-right"
            >
              <svg
                height="8"
                viewBox="0 0 8 14"
                width="8"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M7.7 6.3l-6-6C1.5.1 1.3 0 1 0 .4 0 0 .4 0 1c0 .3.1.5.3.7L5.6 7 .3 12.3c-.2.2-.3.4-.3.7 0 .6.4 1 1 1 .3 0 .5-.1.7-.3l6-6c.2-.2.3-.4.3-.7s-.1-.5-.3-.7z"
                  fill="#4d5969"
                />
              </svg>
            </span>
          </div>
        </div>
      </div>
      <div
        class="Layout--vertical Layout--layout-spacing-small StyledProps--main title StyledProps--padding-top-small"
      >
        <div
          class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main StyledProps--margin-bottom-medium StyledProps--flex StyledProps--flex-alignItems-center StyledProps--flex-justifyContent-flex-start"
        >
          <div
            class="colorBar"
            style="background-color: rgb(0, 99, 247);"
          />
        </div>
        <div
          class="Layout--horizontal StyledProps--main StyledProps--flex StyledProps--flex-alignItems-center StyledProps--flex-justifyContent-flex-start"
        >
          <p
            class="StyledProps--font Text--lineclamp StyledProps--main StyledProps--font-size-medium StyledProps--font-weight-semi-bold StyledProps--color StyledProps--color-grey800 StyledProps--padding-right-xlarge"
            style="--text-line-clamp: 1;"
          >
            dummy name
          </p>
          <p
            class="StyledProps--font Text--lineclamp StyledProps--main StyledProps--font-size-small StyledProps--font-weight-semi-bold StyledProps--color StyledProps--color-grey500 StyledProps--padding-right-medium"
            style="--text-line-clamp: 1;"
          >
            idLabel
          </p>
          <div
            class="divider"
          />
          <p
            class="StyledProps--font Text--lineclamp StyledProps--main StyledProps--font-size-small StyledProps--font-weight-semi-bold StyledProps--color StyledProps--color-grey500 StyledProps--padding-left-medium"
            style="--text-line-clamp: 1;"
          >
            orgLabel: testOrg
          </p>
        </div>
      </div>
    </div>
    <div
      class="Layout--vertical StyledProps--main StyledProps--padding-top-small StyledProps--flex StyledProps--flex-justifyContent-space-between StyledProps--flex-alignItems-flex-end"
    >
      <span
        class="bp3-popover-wrapper bp3-dark"
      >
        <span
          class="bp3-popover-target"
        >
          <button
            class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main Button--with-current-color Button--iconOnly Button--without-shadow Button--withLeftIcon"
            type="button"
          >
            <span
              class="bp3-icon StyledProps--main"
              data-icon="Options"
            >
              <svg
                fill="none"
                height="16"
                viewBox="0 0 4 16"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  clip-rule="evenodd"
                  d="M2 12.5a1 1 0 100 2 1 1 0 000-2zm-2 1a2 2 0 114 0 2 2 0 01-4 0zm2-12a1 1 0 100 2 1 1 0 000-2zm-2 1a2 2 0 114 0 2 2 0 01-4 0zM2 7a1 1 0 100 2 1 1 0 000-2zM0 8a2 2 0 114 0 2 2 0 01-4 0z"
                  fill="currentColor"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
          </button>
        </span>
      </span>
      <div
        class="Layout--horizontal StyledProps--main StyledProps--padding-right-huge StyledProps--margin-right-huge"
      >
        <div
          class="Layout--vertical StyledProps--main StyledProps--padding-right-xlarge"
        >
          <p
            class="StyledProps--font StyledProps--main StyledProps--font-xsmall StyledProps--color StyledProps--color-grey400 StyledProps--padding-left-xsmall StyledProps--padding-bottom-small"
          >
            adminLabel (1)
          </p>
          <div
            class="Layout--horizontal StyledProps--main StyledProps--flex StyledProps--flex-alignItems-center StyledProps--flex-justifyContent-flex-start"
          >
            <div
              class="AvatarGroup--stack projectDetailsAvatarGroup"
              style="--avatar-over-lap: -13px;"
            >
              <div
                class="AvatarGroup--stackAvatar Avatar--Avatar Avatar--contentStyle"
              >
                <span
                  class="bp3-popover-wrapper Avatar--avatarPopOver"
                >
                  <span
                    class="bp3-popover-target"
                  >
                    <div
                      class="Avatar--AvatarInner"
                      style="border-radius: 100%; line-height: 26px; width: 32px; height: 32px; font-size: 10px;"
                      tabindex="0"
                    >
                      +
                    </div>
                  </span>
                </span>
              </div>
              <div
                class="AvatarGroup--stackAvatar Avatar--Avatar Avatar--contentStyle"
                uuid="19bYA-ooQZOTZQxf2N-VPA"
              >
                <span
                  class="bp3-popover-wrapper Avatar--avatarPopOver"
                >
                  <span
                    class="bp3-popover-target"
                  >
                    <div
                      class="Avatar--AvatarInner"
                      style="border-radius: 100%; line-height: 26px; width: 32px; height: 32px; font-size: 10px;"
                      tabindex="0"
                    >
                      E
                    </div>
                  </span>
                </span>
              </div>
            </div>
          </div>
        </div>
        <div
          class="Layout--vertical StyledProps--main"
        >
          <p
            class="StyledProps--font StyledProps--main StyledProps--font-xsmall StyledProps--color StyledProps--color-grey400 StyledProps--padding-left-xsmall StyledProps--padding-bottom-small"
          >
            collaboratorsLabel (5)
          </p>
          <div
            class="Layout--horizontal StyledProps--main StyledProps--flex StyledProps--flex-alignItems-center StyledProps--flex-justifyContent-flex-start"
          >
            <div
              class="AvatarGroup--stack projectDetailsAvatarGroup"
              style="--avatar-over-lap: -13px;"
            >
              <div
                class="AvatarGroup--stackAvatar Avatar--Avatar Avatar--contentStyle"
              >
                <span
                  class="bp3-popover-wrapper Avatar--avatarPopOver"
                >
                  <span
                    class="bp3-popover-target"
                  >
                    <div
                      class="Avatar--AvatarInner"
                      style="border-radius: 100%; line-height: 26px; width: 32px; height: 32px; font-size: 10px;"
                      tabindex="0"
                    >
                      +
                    </div>
                  </span>
                </span>
              </div>
              <div
                class="AvatarGroup--stackAvatar Avatar--Avatar Avatar--contentStyle"
                uuid="lv0euRhKRCyiXWzS7pOg6g"
              >
                <span
                  class="bp3-popover-wrapper Avatar--avatarPopOver"
                >
                  <span
                    class="bp3-popover-target"
                  >
                    <div
                      class="Avatar--AvatarInner"
                      style="border-radius: 100%; line-height: 26px; width: 32px; height: 32px; font-size: 10px;"
                      tabindex="0"
                    >
                      E
                    </div>
                  </span>
                </span>
              </div>
              <div
                class="AvatarGroup--stackAvatar Avatar--Avatar Avatar--contentStyle"
                uuid="0osgWsTZRsSZ8RWfjLRkEg"
              >
                <span
                  class="bp3-popover-wrapper Avatar--avatarPopOver"
                >
                  <span
                    class="bp3-popover-target"
                  >
                    <div
                      class="Avatar--AvatarInner"
                      style="border-radius: 100%; line-height: 26px; width: 32px; height: 32px; font-size: 10px;"
                      tabindex="0"
                    >
                      E
                    </div>
                  </span>
                </span>
              </div>
              <div
                class="AvatarGroup--stackAvatar Avatar--Avatar Avatar--contentStyle"
                uuid="ZqXNvYmURnO46PX7HwgEtQ"
              >
                <span
                  class="bp3-popover-wrapper Avatar--avatarPopOver"
                >
                  <span
                    class="bp3-popover-target"
                  >
                    <div
                      class="Avatar--AvatarInner"
                      style="border-radius: 100%; line-height: 26px; width: 32px; height: 32px; font-size: 10px;"
                      tabindex="0"
                    >
                      E
                    </div>
                  </span>
                </span>
              </div>
              <div
                class="AvatarGroup--stackAvatar Avatar--Avatar Avatar--contentStyle"
                uuid="nhLgdGgxS_iqa0KP5edC-w"
              >
                <span
                  class="bp3-popover-wrapper Avatar--avatarPopOver"
                >
                  <span
                    class="bp3-popover-target"
                  >
                    <div
                      class="Avatar--AvatarInner"
                      style="border-radius: 100%; line-height: 26px; width: 32px; height: 32px; font-size: 10px;"
                      tabindex="0"
                    >
                      E
                    </div>
                  </span>
                </span>
              </div>
              <div
                class="AvatarGroup--stackAvatar Avatar--Avatar Avatar--contentStyle"
                uuid="BnTbQTIJS4SkadzYv0BcbA"
              >
                <span
                  class="bp3-popover-wrapper Avatar--avatarPopOver"
                >
                  <span
                    class="bp3-popover-target"
                  >
                    <div
                      class="Avatar--AvatarInner"
                      style="border-radius: 100%; line-height: 26px; width: 32px; height: 32px; font-size: 10px;"
                      tabindex="0"
                    >
                      E
                    </div>
                  </span>
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="StyledProps--font StyledProps--main PageBody--pageBody"
    data-name="page-body"
  >
    <div
      class="Layout--horizontal StyledProps--main"
    >
      <div
        class="StyledProps--font StyledProps--main enabledModules StyledProps--padding-xxlarge"
      >
        <div
          class="Layout--vertical Layout--layout-spacing-large StyledProps--main StyledProps--padding-small"
        >
          <p
            class="StyledProps--font StyledProps--main StyledProps--font-size-medium StyledProps--font-weight-semi-bold StyledProps--color StyledProps--color-black"
          >
            modules
          </p>
          <div
            class="Layout--vertical Layout--layout-spacing-huge StyledProps--main StyledProps--padding-huge StyledProps--flex StyledProps--flex-align-center-center"
          >
            <span
              class="bp3-icon StyledProps--main"
              data-icon="nav-project"
            >
              <svg
                height="70"
                viewBox="0 0 22 22"
                width="70"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M1.1 4.583L11 0l9.9 4.583v12.834L11 22l-9.9-4.583zm9 5.171l-7.2-3.33v9.811l7.2 3.338V9.754zm9 6.481V6.424l-7.2 3.33v9.819zm-1.462-11.15L11 2.012 4.362 5.085 11 8.157z"
                  fill="#56778d"
                />
              </svg>
            </span>
            <p
              class="StyledProps--font StyledProps--main StyledProps--font-medium"
            >
              projectsOrgs.noModules
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
